link + font family Fredoka

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
         <title>Document</title>
         <!-- link css -->
         <link rel="stylesheet" href="css/style.css">
+        <!-- link fonts google -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+
     </head>
     <body>
             <div class="coontainer">
-                <header></header>
+                <header>
+                    <h1>
+                        Meet Our Team
+                    </h1>
+                    <p></p>
+                </header>
                 <main>
                     <section>
                         <div>
