--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                     <h1>
                         Meet Our Team
                     </h1>
-                    <p></p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ex obcaecati expedita facilis aperiam, laboriosam doloremque a. Perspiciatis provident ipsum velit debitis. Aperiam modi voluptates inventore repudiandae voluptate, unde est.
+                    </p>
                 </header>
                 <main>
                     <section>
